@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model

class GreenSpaceManager {

}

class ToDoList{
    pendingTasks
}
class Agenda {
    plannedTasks
}

class Manager {
    section
}

Manager "1" --up "1.*" GreenSpaceManager: is a >
Manager "1" -- "*" ToDoList: manages >
Manager "1" -- "*" Agenda: manages >
Agenda "1" -- "*" ToDoList: gets tasks from >



@enduml